# rst

./: CMakeLists.txt  GenerateCollection.cmake
cpp/: CMakeLists.txt
cpp/deprecated/: CMakeLists.txt
cpp/stable/rst/: RSTVersion.h.in
java/: CMakeLists.txt  build.xml.in
project/: codeCheck.py
proto/: Collection.proto.in
proto/deprecated/rst/audition/: FloatSoundArray.proto  FormattedSoundChunk.proto  InterauralTimeDifference.proto
proto/deprecated/rst/deprecated/: DoNotUseMe.proto  __package.proto
proto/deprecated/rst/euroc/: ColoredPoseSet.proto
proto/deprecated/rst/hri/: GroupHypothesis.proto
proto/deprecated/rst/kinematics/: JointPositionState.proto  JointState.proto  ProprioceptionState.proto
proto/deprecated/rst/vision/: CalibrationMatrices.proto  CameraMatrix3x4.proto
proto/sandbox/rst/amarsi/: AdaptiveComponentStatus.proto
proto/sandbox/rst/animation/: BinocularHeadGaze.proto  EmotionExpression.proto  HeadAnimation.proto  __package.proto
proto/sandbox/rst/audition/: Phoneme.proto  PhonemeCollection.proto  Utterance.proto
proto/sandbox/rst/bayesnetwork/: BayesNetwork.proto  BayesNetworkEvidence.proto  BayesVariable.proto
proto/sandbox/rst/calendar/: CalendarList.proto  CalendarQuery.proto  CalendarQueryResult.proto  CalendarUpdate.proto
proto/sandbox/rst/cbse/: ComponentInfo.proto  ComponentState.proto  InputPort.proto  OutputPort.proto  Tick.proto  __package.proto
proto/sandbox/rst/classification/: ClassificationResultMap.proto  ClassificationResults.proto
proto/sandbox/rst/cogimon/: ModelComponentConfig.proto
proto/sandbox/rst/communicationpatterns/: ResourceAllocation.proto
proto/sandbox/rst/dialog/: DialogAct.proto  DialogManagerCommand.proto  IncrementalUnit.proto  SpeechHypotheses.proto  SpeechHypothesis.proto
proto/sandbox/rst/dynamics/: MotorCurrents.proto
proto/sandbox/rst/geometry/: SphericalDirectionFloat.proto
proto/sandbox/rst/hri/: GroupHypothesis.proto  Head.proto  HighlightTarget.proto  PersonHypotheses.proto  PersonHypothesis.proto
proto/sandbox/rst/kinematics/: JointJerks.proto
proto/sandbox/rst/monitoring/: ProcessAnomaly.proto  ProcessCues.proto
proto/sandbox/rst/robot/: ForceApplication.proto  JointState.proto  Weights.proto
proto/sandbox/rst/signalprocessing/: InstantaneousPhase.proto  __package.proto
proto/sandbox/rst/timing/: Point2DTimeseries.proto  Point2DTimestampPair.proto
proto/sandbox/rst/tracking/: TrackedClassifiedRegion3D.proto  TrackedClassifiedRegions3D.proto  TrackedPolygonalPatch3D.proto  TrackedPolygonalPatches3D.proto
proto/sandbox/rst/tts/: Prosody.proto  TextToSpeechInstruction.proto
proto/sandbox/rst/vision/: CalibrationMatrices.proto  EncodedImage.proto  FaceLandmarks.proto  FaceWithGaze.proto  HeadObject.proto  HeadObjects.proto
proto/stable/rst/: Constraint.proto  Unit.proto  __package.proto
proto/stable/rst/animation/: BinocularHeadGaze.proto  EmotionExpression.proto  HeadAnimation.proto
proto/stable/rst/audition/: SoundChunk.proto  Utterance.proto  __package.proto
proto/stable/rst/calendar/: Attendee.proto  CalendarComponents.proto  DateTime.proto  Entry.proto  Event.proto  Observance.proto  Organizer.proto  Recurrence.proto  RecurrenceId.proto  RecurrenceRule.proto  Relationship.proto  RequestStatus.proto  TimeZone.proto  Todo.proto
proto/stable/rst/classification/: ClassificationResult.proto  ClassifiedRegion2D.proto  ClassifiedRegion3D.proto  ClassifiedRegions2D.proto  ClassifiedRegions3D.proto  __package.proto
proto/stable/rst/communicationpatterns/: TaskState.proto  __package.proto
proto/stable/rst/devices/: __package.proto
proto/stable/rst/dialog/: DialogManagerCommand.proto  IncrementalUnit.proto  SpeechHypothesis.proto  __package.proto
proto/stable/rst/dynamics/: Forces.proto  JointImpedance.proto  JointTorques.proto  MotorCurrents.proto  Pressures.proto  Torques.proto  Wrench.proto  __package.proto
proto/stable/rst/generic/: Dictionary.proto  KeyValuePair.proto  MethodCall.proto  Value.proto  __package.proto
proto/stable/rst/geometry/: AxisAlignedBoundingBox3DFloat.proto  BoundingBox.proto  BoundingBox3DFloat.proto  BoundingBox3DFloatSet.proto  CameraPose.proto  Cylinder3DFloat.proto  Cylinder3DFloatSet.proto  FieldOfView.proto  Lengths.proto  PointCloud2DInt.proto  PointCloud3DFloat.proto  PointCloudSet3DFloat.proto  PointPair.proto  PolygonalPatch3D.proto  PolygonalPatch3DSet.proto  Pose.proto  Rotation.proto  Shape3DFloat.proto  SphericalDirectionFloat.proto  Translation.proto  TriangleMesh3DFloat.proto  TriangleMesh3DFloatSet.proto  ViewFrustum.proto  __package.proto
proto/stable/rst/graph/: Edge.proto  EdgeListGraph.proto  Node.proto
proto/stable/rst/hri/: Body.proto  HighlightTarget.proto  Legs.proto  LegsList.proto  __package.proto
proto/stable/rst/kinematics/: AngularAccelerations.proto  AngularVelocities.proto  CollisionGeometry.proto  JointAccelerations.proto  JointAngles.proto  JointVelocities.proto  LinearAccelerations.proto  LinearVelocities.proto  ObjectCollision.proto  Posture3DFloat.proto  SpatialAccelerations.proto  Twist.proto  __package.proto
proto/stable/rst/math/: MatrixDouble.proto  Vec2DFloat.proto  Vec2DInt.proto  Vec3DDouble.proto  Vec3DFloat.proto  Vec3DInt.proto  VectorDouble.proto  __package.proto
proto/stable/rst/motioncontrol/: MotionStatus.proto  __package.proto
proto/stable/rst/navigation/: CommandResult.proto  CoordinateCommand.proto  ExecutionParameters.proto  LabelCommand.proto  MotionParameters.proto  OccupancyGrid2DInt.proto  Path.proto  PlatformCapabilities.proto  __package.proto
proto/stable/rst/robot/: JointState.proto  PickAndPlaceAction.proto  RobotCollision.proto  __package.proto
proto/stable/rst/scene/: SceneObject.proto  SceneObjectQuery.proto  SceneObjects.proto  __package.proto
proto/stable/rst/statemachine/: StateChange.proto  __package.proto
proto/stable/rst/stochastics/: Gaussian1D.proto  __package.proto  (+1 more)
python/: CMakeLists.txt  init-hack-deprecated.py  init-hack-sandbox.py  setup-deprecated.py.in  setup-sandbox.py.in  setup-stable.py.in
tools/: promotable-types.sh
(+50 files in other folders)
